--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "outermost/nautilus",
-    "description": "Just another block theme.",
+    "description": "A WordPress block theme.",
     "authors": [
         {
             "name": "Nick Diego",
