--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nautilus",
 	"version": "0.1.0",
-	"description": "Just another block theme.",
+	"description": "A WordPress block theme.",
 	"author": "Nick Diego",
 	"license": "GPL-2.0-or-later",
 	"repository": {
@@ -9,9 +9,10 @@
 		"url": "git://github.com/ndiego/nautilus.git"
 	},
   "scripts": {
-    "theme-zip": "composer zip",
-    "start-sass": "sass --watch src/blocks:assets/blocks src/style.scss:style.css --no-source-map",
-    "build-sass": "sass src/blocks:assets/blocks --no-source-map --style=compressed"
+    "build:sass:blocks": "sass src/blocks:assets/blocks --no-source-map --style=compressed",
+    "build:sass:style": "sass src/style.scss:style.css --no-source-map",
+    "start:sass": "sass --watch src/blocks:assets/blocks src/style.scss:style.css --no-source-map",
+    "theme-zip": "composer zip"
   },
   "devDependencies": {
     "@wordpress/scripts": "^28.0.0"
